--- a/index.html
+++ b/index.html
@@ -3,10 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    
     <title>Document</title>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>hello</h1>
+    <h1>Our Menu</h1>
+    <div class="container">
+        <div class="box">
+            chicken
+        </div>
+<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dignissimos perferendis exercitationem aspernatur esse eaque porro officiis dolores suscipit a quas corporis possimus, voluptatibus unde consequuntur explicabo pariatur impedit placeat voluptas?
+
+</p>
+    </div>
+    <div class="container">
+        <div class="box">
+           beef
+        </div>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae consequatur ipsum, cupiditate enim voluptatum minima? Consequuntur itaque commodi magnam mollitia dolor fuga, quidem consequatur voluptas ducimus voluptatibus eius amet et?
+        </p>
+    </div>
+    <div class="container">
+        <div class="box">
+            sushi
+        </div>
+        <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Exercitationem velit, sapiente cumque accusantium tenetur dicta placeat et, esse officia, adipisci consectetur dolore architecto odit illum! Perspiciatis nesciunt obcaecati rerum a.
+        </p>
+    </div>
 </body>
 </html>
