--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <title>Document</title>
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
     <h1>Our Menu</h1>
-    <div class="container">
+    <div class="container1">
         <div class="box">
             chicken
         </div>
@@ -17,7 +17,7 @@
 
 </p>
     </div>
-    <div class="container">
+    <div class="container2">
         <div class="box">
            beef
         </div>
@@ -25,7 +25,7 @@
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae consequatur ipsum, cupiditate enim voluptatum minima? Consequuntur itaque commodi magnam mollitia dolor fuga, quidem consequatur voluptas ducimus voluptatibus eius amet et?
         </p>
     </div>
-    <div class="container">
+    <div class="container3">
         <div class="box">
             sushi
         </div>
